# oi-checklist-generator

./: Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml
examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-10/: Cargo.toml
pr-preview/pr-10/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-10/src/online_judges/: ojuz.rs
pr-preview/pr-11/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-11/src/: cache.rs
pr-preview/pr-11/src/render/olympiads/: cnoi.rs
pr-preview/pr-12/: Cargo.toml
pr-preview/pr-12/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-12/src/render/olympiads/: ccc.rs  ceoi.rs
pr-preview/pr-13/: .rustfmt.toml
pr-preview/pr-13/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-13/src/render/olympiads/: joi_open.rs
pr-preview/pr-14/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-15/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-16/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-6/: README.md
pr-preview/pr-6/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-6/src/: lib.rs
pr-preview/pr-7/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-7/src/render/olympiads/: joisc.rs
pr-preview/pr-8/: LICENSE-APACHE
pr-preview/pr-8/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-8/src/online_judges/: dmoj.rs
pr-preview/pr-9/examples/: blank.html  rainboy.html  skittles1412.html
pr-preview/pr-9/src/online_judges/: mod.rs
pr-preview/pr-9/src/render/olympiads/: boi.rs
src/: cache.rs  main.rs  theme.rs
src/online_judges/: codeforces.rs  mod.rs  ojuz.rs
src/render/: mod.rs
src/render/olympiads/: apio.rs  boi.rs  ccc.rs  cco.rs  ceoi.rs  ioi.rs  joi_final.rs  joisc.rs  mod.rs
wix/: main.wxs
