[package]
name = "oi_checklist_generator"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/skittles1412/oi-checklist-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oicg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
base64 = "0.21.4"
clap = { version = "4.4.3", features = ["derive"] }
console = "0.15.7"
directories = "5.0.1"
indicatif = "0.17.6"
nipper = "0.1.9"
open = "5.0.0"
reqwest = { version = "0.11.20", features = ["rustls-tls", "json", "multipart", "gzip", "cookies"], default-features = false }
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
yew = { version = "0.20.0", features = ["ssr"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.2.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
