[package]
name = "oi_checklist_generator"
version = "0.1.2"
authors = ["skittles1412"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/skittles1412/oi-checklist-generator"
description = """
A tool to automatically generate an OI checklist from the submission history of online judges.
"""

[package.metadata.wix]
upgrade-guid = "1D3F9AA4-8AFE-47C0-BD80-CD2C5C99F301"
path-guid = "EAD464C4-C632-4871-A95D-1944994A8DC5"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oicg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
console = "0.15.8"
directories = "5.0.1"
indicatif = "0.17.8"
nipper = "0.1.9"
open = "5.3.0"
reqwest = { version = "0.12.7", features = ["rustls-tls", "json", "multipart", "gzip", "cookies"], default-features = false }
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt", "rt-multi-thread", "sync"] }
yew = { version = "0.21.0", features = ["ssr"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
