[package]
name = "oi_checklist_generator"
version = "0.1.3"
authors = ["skittles1412"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/skittles1412/oi-checklist-generator"
description = """
A tool to automatically generate an OI checklist from the submission history of online judges.
"""

[package.metadata.wix]
upgrade-guid = "1D3F9AA4-8AFE-47C0-BD80-CD2C5C99F301"
path-guid = "EAD464C4-C632-4871-A95D-1944994A8DC5"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oicg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive"] }
console = "0.15.10"
directories = "5.0.1"
indicatif = "0.17.9"
nipper = "0.1.9"
open = "5.3.2"
reqwest = { version = "0.12.12", features = ["rustls-tls", "json", "multipart", "gzip", "cookies"], default-features = false }
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
yew = { version = "0.21.0", features = ["ssr"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
